fix double scrollBar

--- a/src/sass/modal.scss
+++ b/src/sass/modal.scss
@@ -52,3 +52,6 @@
 .is-hidden-btn {
   display: none;
 }
+  .scroll-hidden {
+    overflow-y: hidden;
+  }
